--- a/.github/actions/checkov/action.yaml
+++ b/.github/actions/checkov/action.yaml
@@ -69,8 +69,8 @@ runs:
       then
           SKIP_PATH=${{ inputs.skip-path }}
           [[ ! "$SKIP_PATH" =~ ^\|.+ ]] || SKIP_PATH="${SKIP_PATH:1}"
-          full_str=${SKIP_PATH//|/ --build-arg }
-          SKIP_PATHS="--skip-path=$full_str"
+          full_str=${SKIP_PATH//|/ --skip-path }
+          SKIP_PATHS="--skip-path $full_str"
           echo -e "${CYAN}[ INFO ] > Skip paths are the following${BLANK}"
           echo "${SKIP_PATHS}"
           OPTIONS+=" ${SKIP_PATHS}"
