--- a/.github/actions/checkov/action.yaml
+++ b/.github/actions/checkov/action.yaml
@@ -65,15 +65,18 @@ runs:
         echo -e "${CYAN}[ INFO ] > Using soft-fail mode.${BLANK}"
         OPTIONS+=" --soft-fail"
       fi
-      if [[ -n "${{ inputs.skip-path }}" ]]
+      if [[ "${{ inputs.skip-path }}" ]]
       then
-          SKIP_PATH=${{ inputs.skip-path }}
-          [[ ! "$SKIP_PATH" =~ ^\|.+ ]] || SKIP_PATH="${SKIP_PATH:1}"
-          full_str=${SKIP_PATH//|/ --skip-path }
-          SKIP_PATHS="--skip-path $full_str"
-          echo -e "${CYAN}[ INFO ] > Skip paths are the following${BLANK}"
-          echo "${SKIP_PATHS}"
-          OPTIONS+=" ${SKIP_PATHS}"
+        echo "--skip path ${{ inputs.skip-path }}"
+        SKIP_PATH=${{ inputs.skip-path }}
+        echo "SKIP_PATH $SKIP_PATH"
+        [[ ! "$SKIP_PATH" =~ ^\|.+ ]] || SKIP_PATH="${SKIP_PATH:1}"
+        full_str=${SKIP_PATH//|/ --skip-path }
+        SKIP_PATHS="--skip-path $full_str"
+        echo -e "${CYAN}[ INFO ] > Skip paths are the following${BLANK}"
+        echo "${SKIP_PATHS}"
+        OPTIONS+=" ${SKIP_PATHS}"
+        echo "OPTIONS $OPTIONS"
       fi
 
       echo -e "${YELLOW}[ EXECUTING ] > Executing static code analyzis on ${{ inputs.workingdir }}/${{ inputs.artefact }}${BLANK}"
