--- a/.github/actions/checkov/action.yaml
+++ b/.github/actions/checkov/action.yaml
@@ -31,6 +31,10 @@ inputs:
     required: false
   skip-framework:
     required: false
+  skip-check:
+    required: false
+  check:
+    required: false
   workingdir:
     required: false
     default: .
@@ -51,7 +55,6 @@ runs:
         echo -e "${CYAN}[ INFO ] > Displaying errors only.${BLANK}"
         OPTIONS+=" --quiet"
       fi
-
       if [[ ${{ inputs.skip-download }} = true ]]
       then
         echo -e "${CYAN}[ INFO ] > Displaying without guide.${BLANK}"
@@ -81,6 +84,26 @@ runs:
         echo -e "${CYAN}[ INFO ] > Skip paths are the following${BLANK}"
         echo "${SKIP_PATHS}"
         OPTIONS+=" ${SKIP_PATHS}"
+      fi
+      if [[ "${{ inputs.skip-check }}" ]]
+      then
+        export SKIP_CHECK="${{ inputs.skip-path }}"
+        [[ ! "$SKIP_CHECK" =~ ^\|.+ ]] || SKIP_CHECK="${SKIP_CHECK:1}"
+        full_str=${SKIP_CHECK//|/ --skip-check }
+        SKIP_CHECKS="--skip-check $full_str"
+        echo -e "${CYAN}[ INFO ] > Skip check are the following${BLANK}"
+        echo "${SKIP_CHECKS}"
+        OPTIONS+=" ${SKIP_CHECKS}"
+      fi
+      if [[ "${{ inputs.check }}" ]]
+      then
+        export CHECK="${{ inputs.check }}"
+        [[ ! "$CHECK" =~ ^\|.+ ]] || CHECK="${SKIP_CHECK:1}"
+        full_str=${CHECK//|/ --check }
+        CHECKS="--skip-check $full_str"
+        echo -e "${CYAN}[ INFO ] > Checks are the following${BLANK}"
+        echo "${CHECKS}"
+        OPTIONS+=" ${CHECKS}"
       fi
 
       echo -e "${YELLOW}[ EXECUTING ] > Executing static code analyzis on ${{ inputs.workingdir }}/${{ inputs.artefact }}${BLANK}"
