--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -142,13 +142,9 @@ on:
         type: string
 
 jobs:
-  prepare:
-    name: Preparation
-    run: |
-      echo "CI_IMG=OK" >> $GITHUB_ENV
   helm-lint:
     name: helm-lint
-    needs: [prepare]
+    # needs: [prepare]
     timeout-minutes: 3
     runs-on: ubuntu-20.04
     container:
@@ -162,7 +158,7 @@ jobs:
         workingdir: ${{ inputs.workingdir }}
   helm-datree:
     name: helm-datree
-    needs: [prepare]
+    # needs: [prepare]
     timeout-minutes: 3
     runs-on: ubuntu-20.04
     container:
@@ -177,7 +173,7 @@ jobs:
         workingdir: ${{ inputs.workingdir }}
   checkov:
     name: checkov-scan
-    needs: [prepare]
+    # needs: [prepare]
     timeout-minutes: 3
     runs-on: ubuntu-20.04
     container:
@@ -203,6 +199,7 @@ jobs:
         framework: ${{ inputs.framework }}
   helm-unittest:
     name: helm-unittest
+    # needs: [prepare]
     timeout-minutes: 10
     runs-on: ubuntu-20.04
     container:
@@ -218,6 +215,7 @@ jobs:
         tests-dir: ${{ inputs.tests-dir }}
   helm-template:
     name: helm-template
+    # needs: [prepare]
     timeout-minutes: 3
     runs-on: ubuntu-20.04
     container:
