--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -13,7 +13,7 @@ on:
       runs-on:
         description: OS to run jobs on
         required: false
-        default: ubuntu:20.04
+        default: ubuntu-20.04
         type: string
       ci-image:
         description: Docker image used for CI jobs
@@ -151,7 +151,7 @@ jobs:
     name: helm-lint
     # needs: [prepare]
     timeout-minutes: 3
-    runs-on: "${{ inputs.runs-on }}"
+    runs-on: ${{ inputs.runs-on }}
     container:
       image: ${{ inputs.ci-image }}
     steps:
@@ -165,7 +165,7 @@ jobs:
     name: helm-datree
     # needs: [prepare]
     timeout-minutes: 3
-    runs-on: "${{ inputs.runs-on }}"
+    runs-on: ${{ inputs.runs-on }}
     container:
       image: ${{ inputs.ci-image }}
     steps:
@@ -180,7 +180,7 @@ jobs:
     name: checkov-scan
     # needs: [prepare]
     timeout-minutes: 3
-    runs-on: "${{ inputs.runs-on }}"
+    runs-on: ${{ inputs.runs-on }}
     container:
       image: ${{ inputs.ci-image }}
     steps:
@@ -206,7 +206,7 @@ jobs:
     name: helm-unittest
     # needs: [prepare]
     timeout-minutes: 10
-    runs-on: "${{ inputs.runs-on }}"
+    runs-on: ${{ inputs.runs-on }}
     container:
       image: ${{ inputs.ci-image }}
     steps:
@@ -222,7 +222,7 @@ jobs:
     name: helm-template
     # needs: [prepare]
     timeout-minutes: 3
-    runs-on: "${{ inputs.runs-on }}"
+    runs-on: ${{ inputs.runs-on }}
     container:
       image: ${{ inputs.ci-image }}
     steps:
