--- a/.github/workflows/helm-build-sequential.yaml
+++ b/.github/workflows/helm-build-sequential.yaml
@@ -219,6 +219,19 @@ jobs:
         chart-version: ${{ steps.helm-lint.outputs.CHART_VERSION }}
         chart-appversion: ${{ steps.helm-lint.outputs.CHART_APP_VERSION }}
         values-file: ${{ inputs.values-file }}
+    - name: k3s create cluster
+      id: k3s-create-cluster
+      uses: AbsaOSS/k3d-action@v2
+      with:
+        k3d-version: v5.4.9
+        cluster-name: test-cluster-1
+        args: >-
+          -p "8083:80@agent:0:direct"
+          -p "8443:443@agent:0:direct"
+          -p "5053:53/udp@agent:0:direct"
+          --servers 1
+          --no-lb
+          --k3s-arg "--no-deploy=traefik,servicelb,metrics-server@server:*"
     # - name: Helm Full Build
     #   id: helm-full-build
     #   uses: ixxeL-actions/workflows/.github/composition/helm-build@main
