--- a/.github/workflows/helm-build-sequential.yaml
+++ b/.github/workflows/helm-build-sequential.yaml
@@ -219,6 +219,13 @@ jobs:
         chart-version: ${{ steps.helm-lint.outputs.CHART_VERSION }}
         chart-appversion: ${{ steps.helm-lint.outputs.CHART_APP_VERSION }}
         values-file: ${{ inputs.values-file }}
+  k3s-test:
+    name: k3s-tes
+    timeout-minutes: 5
+    runs-on: ${{ inputs.runs-on }}
+    # container:
+    #   image: ${{ inputs.ci-image }}
+    steps:
     - name: k3s create cluster
       id: k3s-create-cluster
       uses: AbsaOSS/k3d-action@v2
