--- a/.github/workflows/helm-build-sequential.yaml
+++ b/.github/workflows/helm-build-sequential.yaml
@@ -233,9 +233,9 @@ jobs:
         k3d-version: v5.4.9
         cluster-name: test-cluster-1
         args: >-
-          -p "8083:80@agent:0:direct"
-          -p "8443:443@agent:0:direct"
-          -p "5053:53/udp@agent:0:direct"
+          -p "8083:80@server:0:direct"
+          -p "8443:443@server:0:direct"
+          -p "5053:53/udp@server:0:direct"
           --servers 1
           --no-lb
           --k3s-arg "--no-deploy=traefik,servicelb,metrics-server@server:*"
