--- a/.github/workflows/helm-build-sequential.yaml
+++ b/.github/workflows/helm-build-sequential.yaml
@@ -147,78 +147,78 @@ on:
         type: string
 
 jobs:
-  helm-build:
-    name: helm-build
-    timeout-minutes: 5
-    runs-on: ${{ inputs.runs-on }}
-    container:
-      image: ${{ inputs.ci-image }}
-    steps:
-    - name: Clone code
-      id: git-clone
-      uses: actions/checkout@v3
-    - name: Helm linting
-      id: helm-lint
-      uses: ixxeL-actions/workflows/.github/actions/helm-lint@main
-      with:
-        workingdir: ${{ inputs.workingdir }}
-    - name: Helm Datree scan
-      id: helm-datree
-      continue-on-error: true
-      uses: ixxeL-actions/workflows/.github/actions/helm-datree@main
-      with:
-        workingdir: ${{ inputs.workingdir }}
-    - name: Helm Checkov scan
-      id: helm-checkov
-      uses: ixxeL-actions/workflows/.github/actions/checkov@main
-      with:
-        workingdir: ${{ inputs.workingdir }}
-        artefact: ${{ inputs.artefact }}
-        compact: ${{ inputs.compact }}
-        quiet: ${{ inputs.quiet }}
-        skip-download: ${{ inputs.skip-download }}
-        format: ${{ inputs.format }}
-        soft-fail: ${{ inputs.soft-fail }}
-        gate: ${{ inputs.gate }}
-        skip-path: ${{ inputs.skip-path }}
-        skip-framework: ${{ inputs.skip-framework }}
-        skip-check: ${{ inputs.skip-check }}
-        check: ${{ inputs.check }}
-        framework: ${{ inputs.framework }}
-    - name: Helm Unit testing
-      id: helm-unittest
-      uses: ixxeL-actions/workflows/.github/actions/helm-unittest@main
-      with:
-        workingdir: ${{ inputs.workingdir }}
-        with-subchart: ${{ inputs.with-subchart }}
-        tests-dir: ${{ inputs.tests-dir }}
-    - name: Helm Templating
-      id: helm-template
-      uses: ixxeL-actions/workflows/.github/actions/helm-template@main
-      with:
-        workingdir: ${{ inputs.workingdir }}
-        strict: ${{ inputs.strict }}
-        chart-name: ${{ inputs.chart-name }}
-        values-file: ${{ inputs.values-file }}
-        add-repo: ${{ inputs.add-repo }}
-        repo-url: ${{ inputs.repo-url }}
-        repo-name: ${{ inputs.repo-name }}
-        repo-user: ${{ inputs.repo-user }}
-        repo-pwd: ${{ inputs.repo-pwd }}
-        set: ${{ inputs.set }}
-        stdout-mode: ${{ inputs.stdout-mode }}
-        display-mode: ${{ inputs.display-mode }}
-        output-dir: ${{ inputs.output-dir }}
-        output-file: ${{ inputs.output-file }}
-    - name: Helm Packaging
-      id: helm-package
-      uses: ixxeL-actions/workflows/.github/actions/helm-package@main
-      with:
-        workingdir: ${{ inputs.workingdir }}
-        chart-name: ${{ steps.helm-lint.outputs.CHART_NAME }}
-        chart-version: ${{ steps.helm-lint.outputs.CHART_VERSION }}
-        chart-appversion: ${{ steps.helm-lint.outputs.CHART_APP_VERSION }}
-        values-file: ${{ inputs.values-file }}
+  # helm-build:
+  #   name: helm-build
+  #   timeout-minutes: 5
+  #   runs-on: ${{ inputs.runs-on }}
+  #   container:
+  #     image: ${{ inputs.ci-image }}
+  #   steps:
+  #   - name: Clone code
+  #     id: git-clone
+  #     uses: actions/checkout@v3
+  #   - name: Helm linting
+  #     id: helm-lint
+  #     uses: ixxeL-actions/workflows/.github/actions/helm-lint@main
+  #     with:
+  #       workingdir: ${{ inputs.workingdir }}
+  #   - name: Helm Datree scan
+  #     id: helm-datree
+  #     continue-on-error: true
+  #     uses: ixxeL-actions/workflows/.github/actions/helm-datree@main
+  #     with:
+  #       workingdir: ${{ inputs.workingdir }}
+  #   - name: Helm Checkov scan
+  #     id: helm-checkov
+  #     uses: ixxeL-actions/workflows/.github/actions/checkov@main
+  #     with:
+  #       workingdir: ${{ inputs.workingdir }}
+  #       artefact: ${{ inputs.artefact }}
+  #       compact: ${{ inputs.compact }}
+  #       quiet: ${{ inputs.quiet }}
+  #       skip-download: ${{ inputs.skip-download }}
+  #       format: ${{ inputs.format }}
+  #       soft-fail: ${{ inputs.soft-fail }}
+  #       gate: ${{ inputs.gate }}
+  #       skip-path: ${{ inputs.skip-path }}
+  #       skip-framework: ${{ inputs.skip-framework }}
+  #       skip-check: ${{ inputs.skip-check }}
+  #       check: ${{ inputs.check }}
+  #       framework: ${{ inputs.framework }}
+  #   - name: Helm Unit testing
+  #     id: helm-unittest
+  #     uses: ixxeL-actions/workflows/.github/actions/helm-unittest@main
+  #     with:
+  #       workingdir: ${{ inputs.workingdir }}
+  #       with-subchart: ${{ inputs.with-subchart }}
+  #       tests-dir: ${{ inputs.tests-dir }}
+  #   - name: Helm Templating
+  #     id: helm-template
+  #     uses: ixxeL-actions/workflows/.github/actions/helm-template@main
+  #     with:
+  #       workingdir: ${{ inputs.workingdir }}
+  #       strict: ${{ inputs.strict }}
+  #       chart-name: ${{ inputs.chart-name }}
+  #       values-file: ${{ inputs.values-file }}
+  #       add-repo: ${{ inputs.add-repo }}
+  #       repo-url: ${{ inputs.repo-url }}
+  #       repo-name: ${{ inputs.repo-name }}
+  #       repo-user: ${{ inputs.repo-user }}
+  #       repo-pwd: ${{ inputs.repo-pwd }}
+  #       set: ${{ inputs.set }}
+  #       stdout-mode: ${{ inputs.stdout-mode }}
+  #       display-mode: ${{ inputs.display-mode }}
+  #       output-dir: ${{ inputs.output-dir }}
+  #       output-file: ${{ inputs.output-file }}
+  #   - name: Helm Packaging
+  #     id: helm-package
+  #     uses: ixxeL-actions/workflows/.github/actions/helm-package@main
+  #     with:
+  #       workingdir: ${{ inputs.workingdir }}
+  #       chart-name: ${{ steps.helm-lint.outputs.CHART_NAME }}
+  #       chart-version: ${{ steps.helm-lint.outputs.CHART_VERSION }}
+  #       chart-appversion: ${{ steps.helm-lint.outputs.CHART_APP_VERSION }}
+  #       values-file: ${{ inputs.values-file }}
   k3s-test:
     name: k3s-tes
     timeout-minutes: 5
@@ -232,13 +232,14 @@ jobs:
       with:
         k3d-version: v5.4.9
         cluster-name: test-cluster-1
-        args: >-
-          -p "8083:80@server:0:direct"
-          -p "8443:443@server:0:direct"
-          -p "5053:53/udp@server:0:direct"
-          --servers 1
-          --no-lb
-          --k3s-arg "--no-deploy=traefik,servicelb,metrics-server@server:*"
+        args: --agents 1
+        # args: >-
+        #   -p "8083:80@server:0:direct"
+        #   -p "8443:443@server:0:direct"
+        #   -p "5053:53/udp@server:0:direct"
+        #   --servers 1
+        #   --no-lb
+        #   --k3s-arg "--no-deploy=traefik,servicelb,metrics-server@server:*"
     # - name: Helm Full Build
     #   id: helm-full-build
     #   uses: ixxeL-actions/workflows/.github/composition/helm-build@main
