--- a/.github/workflows/helm-build-sequential.yaml
+++ b/.github/workflows/helm-build-sequential.yaml
@@ -235,13 +235,18 @@ jobs:
       id: prepare-k3d
       run: |
         curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
+        fetcher --url="https://github.com/AbsaOSS/k3d-action/blob/main/run.sh" --out=./
+        echo "${{ github.action_path }}"
+        ls -la
     - name: k3s create cluster
       id: k3s-create-cluster
       uses: AbsaOSS/k3d-action@v2
       with:
         k3d-version: v5.4.9
         cluster-name: test-cluster-1
-        args: --agents 1
+        args: >-
+          --agents 1
+          --k3s-arg "--no-deploy=traefik"
     - name: kubectl-test
       id: kubectl-test
       run: |
