--- a/.github/workflows/helm-build-sequential.yaml
+++ b/.github/workflows/helm-build-sequential.yaml
@@ -238,6 +238,7 @@ jobs:
         apk add npm
         npm install -g github-files-fetcher
         fetcher --url="https://github.com/AbsaOSS/k3d-action/blob/main/run.sh" --out=./
+        chmod +x ./run.sh
     - name: execute k3d
       id: execute-k3d
       run: |
