--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,36 +5,36 @@ repos:
   hooks:
   - id: check-yaml
     exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
-  hooks:
-  - id: trailing-whitespace
-  - id: end-of-file-fixer
-  - id: detect-private-key
-  - id: check-json
-  - id: check-case-conflict
-  - id: check-executables-have-shebangs
-  - id: check-docstring-first
-- repo: https://github.com/adrienverge/yamllint
-  rev: v1.30.0
-  hooks:
-  - id: yamllint
-    args: [--config-file, .yamllint-cfg.yaml]
-    exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
-- repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
-  rev: 0.2.2
-  hooks:
-  - id: yamlfmt
-    args: [--mapping, '2', --sequence, '2', --offset, '0', --width, '600']
-    exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
-- repo: https://github.com/hadolint/hadolint
-  rev: v2.12.1-beta
-  hooks:
-  - id: hadolint
-    verbose: true
-    args: [src/Dockerfile, --failure-threshold, error]
-- repo: https://github.com/bridgecrewio/checkov.git
-  rev: 2.3.165
-  hooks:
-  - id: checkov
-    args: [--directory, ., --compact, --soft-fail]
+# - repo: https://github.com/pre-commit/pre-commit-hooks
+#   rev: v4.4.0
+#   hooks:
+#   - id: trailing-whitespace
+#   - id: end-of-file-fixer
+#   - id: detect-private-key
+#   - id: check-json
+#   - id: check-case-conflict
+#   - id: check-executables-have-shebangs
+#   - id: check-docstring-first
+# - repo: https://github.com/adrienverge/yamllint
+#   rev: v1.30.0
+#   hooks:
+#   - id: yamllint
+#     args: [--config-file, .yamllint-cfg.yaml]
+#     exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
+# - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
+#   rev: 0.2.2
+#   hooks:
+#   - id: yamlfmt
+#     args: [--mapping, '2', --sequence, '2', --offset, '0', --width, '600']
+#     exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
+# - repo: https://github.com/hadolint/hadolint
+#   rev: v2.12.1-beta
+#   hooks:
+#   - id: hadolint
+#     verbose: true
+#     args: [src/Dockerfile, --failure-threshold, error]
+# - repo: https://github.com/bridgecrewio/checkov.git
+#   rev: 2.3.165
+#   hooks:
+#   - id: checkov
+#     args: [--directory, ., --compact, --soft-fail]
