--- a/.github/workflows/helm-build-sequential.yaml
+++ b/.github/workflows/helm-build-sequential.yaml
@@ -245,7 +245,7 @@ jobs:
         ./run.sh deploy
       env:
         CLUSTER_NAME: test-cluster-1
-        ARGS: "--agents=1 --no-lb --k3s-arg '--no-deploy=traefik'"
+        ARGS: "--servers=1 --no-lb --k3s-arg '--no-deploy=traefik'"
         K3D_VERSION: v5.4.9
     # - name: k3s create cluster
     #   id: k3s-create-cluster
