--- a/.github/workflows/helm-build-sequential.yaml
+++ b/.github/workflows/helm-build-sequential.yaml
@@ -236,15 +236,15 @@ jobs:
     - name: prepare k3d
       id: prepare-k3d
       run: |
-        apk add curl npm
+        apk add curl
         KUBECTL_VERSION=$(curl -L "https://storage.googleapis.com/kubernetes-release/release/stable.txt")
         curl -sSLO "https://storage.googleapis.com/kubernetes-release/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl"
         chmod +x ./kubectl
         mv ./kubectl /usr/local/bin
-        curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
-        npm install -g github-files-fetcher
-        fetcher --url="https://github.com/AbsaOSS/k3d-action/blob/main/run.sh" --out=./
-        chmod +x ./run.sh
+        # curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
+        # npm install -g github-files-fetcher
+        # fetcher --url="https://github.com/AbsaOSS/k3d-action/blob/main/run.sh" --out=./
+        # chmod +x ./run.sh
     - name: execute k3d
       id: execute-k3d
       run: |
