--- a/.github/workflows/helm-build-sequential.yaml
+++ b/.github/workflows/helm-build-sequential.yaml
@@ -250,6 +250,7 @@ jobs:
       run: |
         k3d cluster create
         sleep 1
+        cat /root/.kube/config
         docker ps
         kubectl cluster-info
         # ./run.sh deploy
